== Version 2.4.20 Work in progress (not released -- this is a draft) ==

== Version 2.4.19 ==

  Users side :
  ------------
    # The support of Python 3.7 has been dropped; it's the end of life for Python 3.8
      so it should not annoy anybody.
    # Several issues in the job scheduler has been fixed for periodic jobs :
        - The start date of the jobs depended on the hour the command "creme_job_manager" has started.
        - Some useless extra runs have been removed.
    # Apps :
        * Persons :
            - In the bar-brick for Organisations the logo was never displayed.
        * Documents :
            - You could merge system folders & so, remove them.
        * Emails :
            - There were some issues when the default owner of synchronised emails is a team.
            - A crash when accepting a synchronized email with attachments has been fixed.
        * Billing :
            - The inner-edition of TemplateBase instances bas been fixed.


== Version 2.4.18 ==

  UPGRADE NOTE :
    - You should re-generate the media files (creme generatemedia --settings=[...]).

  Users side :
  ------------
    # Apps :
        * Emails :
            - In email synchronisation:
                - There was an error when accepting a fixed forwarded email.
                - The display of error, when using single actions (accept & delete), has been fixed.


== Version 2.4.17 ==

  Users side :
  ------------
    # The setting SOFTWARE_LABEL in now used for the title of the login page.
    # Apps :
        * Geolocation :
            - A crash in the JavaScript code of blocks when the entity is deleted has been fixed.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # Some issues with the populating of the test DB have been fixed.
          For example, the 'populate' was made even if the test DB creation failed (leading to confusion).


== Version 2.4.16 ==

  Users side :
  ------------