@@ -1,5 +1,12 @@
 == Version 2.4.20 Work in progress (not released -- this is a draft) ==
 
+  Users side :
+  ------------
+    # Apps :
+        * Recurrents :
+            - The cloning of Generator has been disabled.
+
+
 == Version 2.4.19 ==
 
   Users side :
